Fix/topic details (#105)
* Updated GET /topic/:id

* adjusted meets endpoint response payload

* Updated POST /topics to return the id of the topic

* Fixed DELETE /topics/:id

* Updated CHANGELOG.md

---------
